[package]
name = "rlua-builders"
version = "0.1.2"
authors = ["Yan Soares Couto <yancouto@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/yancouto/rlua-builders"
description = "Derive helpers for struct/enum for rlua"
keywords = ["lua"]
readme = "README.md"

[dependencies]
rlua = "0.17"

[dev-dependencies]
rlua-builders-derive = {path = "rlua-builders-derive"}
