[package]
name = "rlua-builders"
version = "0.1.4"
authors = ["Yan Soares Couto <yancouto@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/yancouto/rlua-builders"
description = "Derive helpers for struct/enum for rlua"
keywords = ["lua"]
readme = "README.md"

[dependencies]
rlua = "0.17"
rlua-builders-derive = {version = "0.1.4", path = "rlua-builders-derive", optional = true}

[features]
default = ["derive"]
derive = ["rlua-builders-derive"]
