[package]
name = "rlua-builders-derive"
version = "0.1.4"
authors = ["Yan Soares Couto <yancouto@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/yancouto/rlua-builders"
description = "Derive helpers for struct/enum for rlua"
keywords = ["lua"]
readme = "../README.md"

[dependencies]
syn = "1"
quote = "1"
proc-macro2 = "1"

[lib]
proc-macro = true
